--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.3",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.1",
     "react-spinners": "^0.11.0",
     "web-vitals": "^2.1.2"
   },
